--- a/src/app/pages/menu/menu.component.scss
+++ b/src/app/pages/menu/menu.component.scss
@@ -1,7 +1,6 @@
-.btn {
-  padding: 1rem;
+.display-1 {
+  font-size: calc(2.8rem + 5vmin);
+  text-align: center;
 }
 
-.display-1 {
-  font-size: calc(2.5rem + 5vmin);
-}
+
