--- a/src/app/pages/quick-mind/quick-mind.component.scss
+++ b/src/app/pages/quick-mind/quick-mind.component.scss
@@ -1,16 +1,34 @@
+.container {
+  padding-top: 70px;
+  height: calc(100vh - 70px);
+}
+
 .display-1 {
-  font-size: calc(2rem + 5vmin);
+  font-size: calc(2rem + 3.5vmin);
 }
 
 .game-question {
   text-align: center;
 
-  p {
-    font-size: calc(1.5rem + 0.03vmin);
-    padding: 1.2rem;
-    color: #343233;
-    background-color: var(--primary);
+   .game-question-wrapper {
+    display: flex;
     border-radius: 0.25rem;
+    border: solid 1px var(--primary);
+    overflow: hidden;
+
+    p {
+      font-size: calc(1.2rem + 0.5vmin);
+      padding: 1.2rem;
+      color: #343233;
+      background-color: var(--primary);
+      margin-bottom: 0;
+      width: 100%;
+    }
+
+    .btn {
+      border-radius: 0;
+      border: none;
+    }
   }
 
   .game-options {
