--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@ $theme-colors: (
   "light": #efdab9,
   "danger": hsl(14, 100%, 53%),
   "success": hsl(141, 53%, 53%),
+  "super-light": #4e4b4d
 );
 
 $body-color: #efdab9;
