--- a/src/app/pages/quick-mind/quick-mind.component.html
+++ b/src/app/pages/quick-mind/quick-mind.component.html
@@ -25,7 +25,7 @@
           </ngb-progressbar>
         </div>
 
-        <small class="d-block text-center mb-3">
+        <small *ngIf="!quickMindService.isAnswerRevealed" class="d-block text-center mb-3">
           Juega con tus amigos tratando de realizar los retos en el menor tiempo posible o antes de que el tiempo se agote.
         </small>
 
