--- a/src/app/pages/game/game.component.html
+++ b/src/app/pages/game/game.component.html
@@ -3,17 +3,24 @@
     <div class="col-12 col-lg-8 offset-lg-2">
       <div class="mb-4">
         <h1 class="display-1">
-          <span class="text-secondary" *ngIf="!gameService.isAnswerRevealed">
+          <span class="text-secondary"
+                *ngIf="!gameService.isAnswerRevealed && !gameService.hasQuit">
             #{{ gameService.getCurrentQuestionNumber() }}
           </span>
-          <span *ngIf="!gameService.isAnswerRevealed">
+          <span *ngIf="!gameService.isAnswerRevealed && !gameService.hasQuit">
             por {{ gameService.getCurrentPrice() }}
           </span>
-          <span class="text-success" *ngIf="gameService.isCorrectAnswer()">
+          <span class="text-success"
+                *ngIf="gameService.isCorrectAnswer()">
             ¡Correcto!
           </span>
-          <span class="text-danger" *ngIf="gameService.isIncorrectAnswer()">
+          <span class="text-danger"
+                *ngIf="gameService.isIncorrectAnswer()">
             Has Perdido...
+          </span>
+          <span class="text-secondary"
+                *ngIf="gameService.hasQuit">
+            Retirado
           </span>
         </h1>
         <p class="lead">
@@ -25,7 +32,8 @@
             {{ gameService.getEarnedPrice() }}
           </span>
           <span *ngIf="!gameService.isAnswerRevealed && !gameService.hasQuit">/</span>
-          <span *ngIf="!gameService.isAnswerRevealed && !gameService.hasQuit" class="text-primary">
+          <span *ngIf="!gameService.isAnswerRevealed && !gameService.hasQuit"
+                class="text-primary">
             Asegurado: {{ gameService.getCurrentFloorPrice() }}
           </span>
         </p>
@@ -38,46 +46,64 @@
               {{ gameService.getCurrentQuestion().question }}
             </p>
 
-<button *ngIf="gameService.isFinalAnswerSelected && !gameService.isAnswerRevealed && !gameService.hasQuit"
-        (click)="gameService.revealAnswer()" class="btn btn-secondary" title="Revelar Respuesta">
-  <fa-icon [icon]="faEye" [fixedWidth]="true"></fa-icon>
-</button>
+            <button *ngIf="gameService.isFinalAnswerSelected && !gameService.isAnswerRevealed && !gameService.hasQuit"
+                    (click)="gameService.revealAnswer()"
+                    class="btn btn-secondary"
+                    title="Revelar Respuesta">
+              <fa-icon [icon]="faEye"
+                       [fixedWidth]="true"></fa-icon>
+            </button>
 
-<button *ngIf="gameService.isCorrectAnswer() && !gameService.hasQuit && !gameService.isEnd()"
-        (click)="gameService.getNextQuestion()" class="btn btn-secondary" title="Siguiente Pregunta">
-  <fa-icon [icon]="faArrowRight" [fixedWidth]="true"></fa-icon>
-</button>
-</div>
+            <button *ngIf="gameService.isCorrectAnswer() && !gameService.hasQuit && !gameService.isEnd()"
+                    (click)="gameService.getNextQuestion()"
+                    class="btn btn-secondary"
+                    title="Siguiente Pregunta">
+              <fa-icon [icon]="faArrowRight"
+                       [fixedWidth]="true"></fa-icon>
+            </button>
+          </div>
 
           <div *ngIf="gameService.timeLeft >= 0 && gameService.timeLeft <= gameService.boundTime && !gameService.isAnswerRevealed"
                class="mb-3">
-            <ngb-progressbar type="secondary" [value]="gameService.timeLeft" [max]="gameService.boundTime" height="0.5rem">
+            <ngb-progressbar type="secondary"
+                             [value]="gameService.timeLeft"
+                             [max]="gameService.boundTime"
+                             height="0.5rem">
             </ngb-progressbar>
           </div>
 
-          <small class="d-block text-secondary text-left mb-3" *ngIf="gameService.isFloor()">
+          <small class="d-block text-secondary text-left mb-3"
+                 *ngIf="gameService.isFloor()">
             Si respondes correctamente esta pregunta puedes asegurar la cantidad ganada hasta ahora.
           </small>
 
           <div class="row game-options">
-            <div *ngFor="let option of gameService.getCurrentQuestion().options; index as i" class="col-12 col-md-6">
-              <div class="option-wrapper" [ngClass]="{ 'blink': gameService.isBlinking(i) }">
-                <div class="game-option" (click)="gameService.selectOption(i)"
-                     [ngClass]="{ 'selected': gameService.isOptionSelected(i), 'disabled': gameService.isFinalAnswerSelected || gameService.hasQuit, 'hidden': gameService.isHidden(i) }">
+            <div *ngFor="let option of gameService.getCurrentQuestion().options; index as i"
+                 class="col-12 col-md-6">
+              <div class="option-wrapper"
+                   [ngClass]="{ 'blink': gameService.isBlinking(i) }">
+                <div class="game-option"
+                     (click)="gameService.selectOption(i)"
+                     [ngClass]="{ 'selected': gameService.isOptionSelected(i),
+                                  'disabled': gameService.isFinalAnswerSelected || gameService.hasQuit,
+                                  'hidden': gameService.isHidden(i) }">
                   <span>{{ gameService.getOptionLetter(i) }}:</span>
                   {{ option }}
                 </div>
 
                 <button *ngIf="gameService.isOptionSelected(i) && gameService.isOptionSelected() && !gameService.isFinalAnswerSelected && !gameService.hasQuit"
-                        (click)="gameService.chooseFinalAnswer()" class="btn btn-outline-secondary"
-                        [disabled]="gameService.isTimerRunning" title="Respuesta Definitiva">
-                  <fa-icon [icon]="faCheck" [fixedWidth]="true"></fa-icon>
+                        (click)="gameService.chooseFinalAnswer()"
+                        class="btn btn-outline-secondary"
+                        [disabled]="gameService.isTimerRunning"
+                        title="Respuesta Definitiva">
+                  <fa-icon [icon]="faCheck"
+                           [fixedWidth]="true"></fa-icon>
                 </button>
               </div>
 
             </div>
-            </div>
-            <div class="text-left">
+          </div>
+          <div class="text-left">
             <button routerLink="/"
                     *ngIf="(gameService.isAnswerRevealed && gameService.isIncorrectAnswer()) || gameService.hasQuit || (gameService.isAnswerRevealed && gameService.isEnd())"
                     class="btn btn-link">
@@ -89,18 +115,23 @@
         <div class="game-lifelines">
           <div class="btn-group-vertical btn-group-lg"
                [ngClass]="{ 'mb-3': gameService.lifelines.fiftyFifty || gameService.lifelines.bible || gameService.lifelines.call }">
-            <button (click)="gameService.useFiftyFifty()" class="btn btn-outline-light"
+            <button (click)="gameService.useFiftyFifty()"
+                    class="btn btn-outline-light"
                     *ngIf="gameService.lifelines.fiftyFifty"
                     [disabled]="gameService.isFinalAnswerSelected || gameService.isTimerRunning || gameService.hasQuit"
                     title="Comodín 50-50: elimina automáticamente dos opciones incorrectas">
               <fa-icon [icon]="faStarHalfAlt"></fa-icon>
             </button>
-            <button (click)="gameService.useBible()" class="btn btn-outline-light" *ngIf="gameService.lifelines.bible"
+            <button (click)="gameService.useBible()"
+                    class="btn btn-outline-light"
+                    *ngIf="gameService.lifelines.bible"
                     [disabled]="gameService.isFinalAnswerSelected|| gameService.isTimerRunning || gameService.hasQuit"
                     title="Comodín usa la Biblia: puedes tomar tu Biblia y buscar la respuesta correcta">
               <fa-icon [icon]="faBible"></fa-icon>
             </button>
-            <button (click)="gameService.useCall()" class="btn btn-outline-light" *ngIf="gameService.lifelines.call"
+            <button (click)="gameService.useCall()"
+                    class="btn btn-outline-light"
+                    *ngIf="gameService.lifelines.call"
                     [disabled]="gameService.isFinalAnswerSelected|| gameService.isTimerRunning || gameService.hasQuit"
                     title="Comodín llamar a un amigo: llama a un amigo y consulta por la respuesta correcta">
               <fa-icon [icon]="faPhone"></fa-icon>
@@ -108,16 +139,15 @@
           </div>
 
 
-          <button (click)="gameService.quit()" class="btn btn-outline-primary btn-lg" *ngIf="!gameService.hasQuit"
+          <button (click)="gameService.quit()"
+                  class="btn btn-outline-primary btn-lg"
+                  *ngIf="!gameService.hasQuit"
                   [disabled]="gameService.isFinalAnswerSelected|| gameService.isTimerRunning"
                   title="Retírate con los puntos ganados hasta ahora">
             <fa-icon [icon]="faHandHoldingUsd"></fa-icon>
           </button>
         </div>
-
       </div>
-
-
     </div>
   </div>
 </div>
