--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -1,8 +1,6 @@
 <div class="container">
   <div class="row vh-100 align-items-center">
     <div class="col-12 d-flex flex-column text-center">
-      <app-logo></app-logo>
-
       <div class="display-1 text-uppercase text-primary">
         Biblionaire
       </div>
@@ -27,7 +25,9 @@
         </button>
 
         <small class="d-block mt-3">
-          Creado por Christiam Mena (v1.0.5) <br />
+          Hecho con <fa-icon [icon]="faHeart"
+                   [fixedWidth]="true"
+                   class="text-danger"></fa-icon> por Christiam Mena (v1.0.5) <br />
           <a href="https://github.com/xtiam57/biblionaire"
              target="_blank">@xtiam57</a>
         </small>
